--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "4.17.11",
+    "mongoose": "5.11.13",
     "nodemon": "2.0.7",
+    "passport-google-oauth20": "2.0.0",
     "ts-node": "9.1.1",
     "typescript": "4.1.3"
+  },
+  "devDependencies": {
+    "@types/passport": "1.0.5",
+    "@types/passport-google-oauth20": "2.0.6"
   }
 }
