--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "4.17.11",
+    "dotenv": "8.2.0",
     "mongoose": "5.11.13",
     "nodemon": "2.0.7",
     "passport-google-oauth20": "2.0.0",
