--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "2.8.9",
     "@types/express": "4.17.11",
+    "cors": "2.8.5",
     "dotenv": "8.2.0",
     "mongoose": "5.11.13",
     "nodemon": "2.0.7",
