--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,11 @@
   "dependencies": {
     "@types/cors": "2.8.9",
     "@types/express": "4.17.11",
+    "@types/mongoose": "5.10.3",
     "cors": "2.8.5",
     "dotenv": "8.2.0",
-    "mongoose": "5.11.13",
+    "google-auth-library": "6.1.6",
     "nodemon": "2.0.7",
-    "passport-google-oauth20": "2.0.0",
     "ts-node": "9.1.1",
     "typescript": "4.1.3"
   },
